--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=file:src/main/resources/templates/
 spring.web.resources.static-locations=file:src/main/resources/static/
 logging.level.web=DEBUG
+spring.security.user.name=administrator
+spring.security.user.password=admin!@34
