--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
                 <artifactId>heroku-maven-plugin</artifactId>
                 <version>2.0.3</version>
                 <configuration>
-                    <appName>callicoder-heroku-maven-demo</appName>
+                    <appName>web-element</appName>
                     <includeTarget>false</includeTarget>
                     <includes>
                         <include>${project.build.directory}/${project.build.finalName}.jar</include>
