modified server port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+#server.port=8080
 server.error.whitelabel.enabled=false
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
