modified js file and name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.web.resources.static-locations=file:src/main/resources/static/
 logging.level.web=DEBUG
 spring.security.user.name=administrator
 spring.security.user.password=admin!@34
+spring.cache.type=NONE
